--- a/Resources/views/Action/obtain_js_token.html.twig
+++ b/Resources/views/Action/obtain_js_token.html.twig
@@ -4,8 +4,9 @@
 
 {% block payum_body %}
     {{ parent() }}
-
-    <form action="{{ actionUrl|default('') }}" method="POST" id="payment-form">
+    
+    prueba js token
+    <form action="" method="POST" id="payment-form">
         <span class="payment-errors"></span>
 
         <div class="form-row">
