--- a/Resources/views/Action/obtain_js_token.html.twig
+++ b/Resources/views/Action/obtain_js_token.html.twig
@@ -1,39 +1,140 @@
-{# https://gist.github.com/briancollins/6365455 #}
-
 {% extends layout ?: "@PayumCore/layout.html.twig" %}
 
 {% block payum_body %}
     {{ parent() }}
-    
-    prueba js token
-    <form action="" method="POST" id="payment-form">
-        <span class="payment-errors"></span>
 
-        <div class="form-row">
-            <label>
-                <span>Card Number</span>
-                <input type="text" size="20" data-stripe="number"/>
-            </label>
+    <!DOCTYPE html>
+    <html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <title>Pagos Pack&amp;Pack</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{asset('stylepagos.css')}}">
+    </head>
+    <body>
+        <div style="border-radius:5px;" class="container text-center formulario">
+            <h1 class="tituloPrincipal">Pack&amp;Pack</h1>
+            <img class="logo" src="{{asset('img/mejorLogo.png')}}" alt="">
+            <h3 class="titulo">Realiza tu pago</h3>
+            <div class="row">
+                <div class="col-xs-6 col-xs-offset-3 fondoFormulario">
+
+                    <form action="" method="POST" id="payment-form" class="form-inline">
+                        <div class="row">
+                            <span class="payment-errors"></span>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-7 text-right">
+
+                                <div class="row">
+                                    <div class="input-group" style="width:68%!important">
+                                        <span class="input-group-addon"><span class="glyphicon glyphicon-credit-card"></span></span>
+                                        <input type="text" class="form-control" placeholder="Numero de tarjeta" size="20" data-stripe="number">
+                                    </div>
+
+
+                                    <div class="input-group" style="width:30%!important">
+                                        <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+                                        <input type="text" class="form-control" placeholder="CVC" data-stripe="cvc">
+                                    </div>
+                                </div>
+
+
+                                <div class="row">
+                                    <div style="margin-top:10px;">
+                                        <label for="exampleSelect1">
+                                            <p style="color:yellow">Vencimiento</p>
+                                        </label>
+                                        <select class="form-control" id="exampleSelect1" data-stripe="exp-month">
+                                            <option>Mes</option>
+                                            <option>01</option>
+                                            <option>02</option>
+                                            <option>03</option>
+                                            <option>04</option>
+                                            <option>05</option>
+                                            <option>06</option>
+                                            <option>07</option>
+                                            <option>08</option>
+                                            <option>09</option>
+                                            <option>10</option>
+                                            <option>11</option>
+                                            <option>12</option>
+                                        </select> /
+                                        <select class="form-control" id="exampleSelect1"  data-stripe="exp-year">
+                                            <option>Año</option>
+                                            <option>2016</option>
+                                            <option>2017</option>
+                                            <option>2018</option>
+                                            <option>2019</option>
+                                            <option>2020</option>
+                                            <option>2021</option>
+                                            <option>2022</option>
+                                            <option>2023</option>
+                                            <option>2024</option>
+                                            <option>2025</option>
+                                            <option>2026</option>
+                                            <option>2027</option>
+                                            <option>2028</option>
+                                            <option>2029</option>
+                                            <option>2030</option>
+                                            <option>2031</option>
+                                            <option>2032</option>
+                                            <option>2033</option>
+                                            <option>2034</option>
+                                            <option>2035</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <button style="margin-top:42px" type="submit" class="btn btn-success completarpago">Completar Pago</button>
+                                </div>
+                            </div>
+                            <div class="col-xs-5" style="padding-right:0;">
+                                <div class="envioTitulo">
+                                    <h4>Tu envío</h4>
+                                </div>
+                                <div class="envioDatos">
+                                    <table style="margin-left: auto; margin-right: auto; text-align: right; width:100%">
+                                        <tr>
+                                            <td style="font-weight:bold">Origen:</td>
+                                            <td>Puebla</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="font-weight:bold">Destino:</td>
+                                            <td>Mexico D.F.</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="font-weight:bold">Fecha:</td>
+                                            <td>05-11-15</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="font-weight:bold">Paquetes:</td>
+                                            <td>3</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <div class="envioTotal">
+                                    <p><strong>Total:</strong><span style="font-size:20px; font-weight:bold;"> $125.00</span><span> MXN</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+
+
+                </div>
+            </div>
+        </div>
+        <div style="height:100%; position: absolute; width:100%; top:0;" class="container-fluid">
+            <div style="height:100%" class="row">
+                <div class="fondoIzquierda col-sm-6"></div>
+                <div class="fondoDerecha col-sm-6"></div>
+            </div>
         </div>
 
-        <div class="form-row">
-            <label>
-                <span>CVC</span>
-                <input type="text" size="4" data-stripe="cvc"/>
-            </label>
-        </div>
+    </body>
+    </html>
 
-        <div class="form-row">
-            <label>
-                <span>Expiration (MM/YYYY)</span>
-                <input type="text" size="2" data-stripe="exp-month"/>
-            </label>
-            <span> / </span>
-            <input type="text" size="4" data-stripe="exp-year"/>
-        </div>
-
-        <button type="submit">Submit Payment</button>
-    </form>
 {% endblock %}
 
 {% block payum_vendor_javascripts %}
