Ajustes de estilo

--- a/Resources/views/Action/obtain_js_token-backup.html.twig
+++ b/Resources/views/Action/obtain_js_token-backup.html.twig
@@ -4,8 +4,8 @@
 
 {% block payum_body %}
     {{ parent() }}
-    
-    <form action="" method="POST" id="payment-form">
+
+    <form action="{{ actionUrl|default('') }}" method="POST" id="payment-form">
         <span class="payment-errors"></span>
 
         <div class="form-row">
