--- a/Resources/views/Action/obtain_js_token.html.twig
+++ b/Resources/views/Action/obtain_js_token.html.twig
@@ -20,10 +20,10 @@
                 <div class="col-xs-6 col-xs-offset-3 fondoFormulario">
 
                     <form action="" method="POST" id="payment-form" class="form-inline">
-                        <div class="row">
+                        <div class="row" style="color: white; padding: 0 0 17px;">
                             <span class="payment-errors"></span>
                         </div>
-                        <div class="row">
+                        <div class="row" style="padding-bottom: 27px;">
                             <div class="col-xs-7 text-right">
 
                                 <div class="row">
