--- a/Resources/views/Action/obtain_js_token.html.twig
+++ b/Resources/views/Action/obtain_js_token.html.twig
@@ -151,6 +151,10 @@
     {{ parent() }}
 
     <script type="text/javascript">
+
+
+        console.log({{ model|json_encode|raw }});
+
         jQuery(function($) {
             $('#payment-form').submit(function(e) {
                 var $form = $(this);
