datos del envio

--- a/Resources/views/Action/obtain_js_token.html.twig
+++ b/Resources/views/Action/obtain_js_token.html.twig
@@ -110,7 +110,7 @@
                                         </tr>
                                         <tr>
                                             <td style="font-weight:bold">Paquetes:</td>
-                                            <td>model.metadata.paquetes</td>
+                                            <td>{{model.metadata.paquetes}}</td>
                                         </tr>
                                     </table>
                                 </div>
