--- a/Resources/views/Action/obtain_js_token.html.twig
+++ b/Resources/views/Action/obtain_js_token.html.twig
@@ -24,16 +24,16 @@
                             <span class="payment-errors"></span>
                         </div>
                         <div class="row" style="padding-bottom: 27px;">
-                            <div class="col-xs-7 text-right">
+                            <div class="col-sm-7 col-xs-12 text-right">
 
                                 <div class="row">
-                                    <div class="input-group" style="width:68%!important">
+                                    <div class="input-group" style="margin-bottom: 10px;">
                                         <span class="input-group-addon"><span class="glyphicon glyphicon-credit-card"></span></span>
                                         <input type="text" class="form-control" placeholder="Numero de tarjeta" size="20" data-stripe="number">
                                     </div>
 
 
-                                    <div class="input-group" style="width:30%!important">
+                                    <div class="input-group">
                                         <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
                                         <input type="text" class="form-control" placeholder="CVC" data-stripe="cvc">
                                     </div>
@@ -90,7 +90,7 @@
                                     <button style="margin-top:42px" type="submit" class="btn btn-success completarpago">Completar Pago</button>
                                 </div>
                             </div>
-                            <div class="col-xs-5" style="padding-right:0;">
+                            <div class="col-sm-5 col-xs-12" style="padding-right:0;">
                                 <div class="envioTitulo">
                                     <h4>Tu envío</h4>
                                 </div>
